home links fix