@@ -1,18 +1,19 @@
 package by.bsuir.springbootproject.services.implementation;
 
+import by.bsuir.springbootproject.dto.RecentUpdate;
 import by.bsuir.springbootproject.dto.RelatedWithType;
 import by.bsuir.springbootproject.entities.Chapter;
 import by.bsuir.springbootproject.entities.Comic;
-import by.bsuir.springbootproject.dto.RecentUpdate;
 import by.bsuir.springbootproject.repositories.ComicRepository;
 import by.bsuir.springbootproject.repositories.TranslationRepository;
 import by.bsuir.springbootproject.services.ComicService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import org.springframework.data.domain.Pageable;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -22,12 +23,22 @@ import java.util.stream.Collectors;
 @Transactional(readOnly = true)
 public class ComicServiceImpl implements ComicService {
 
+    private static final Sort POPULAR_SORT = Sort.by(
+            Sort.Order.desc("popularityScore"),
+            Sort.Order.desc("id")
+    );
+
+    private static final Sort NEWEST_SORT = Sort.by(
+            Sort.Order.desc("createdAt"),
+            Sort.Order.desc("id")
+    );
+
     private final ComicRepository comicRepository;
     private final TranslationRepository translationRepository;
 
     @Override
     public List<Comic> getMostPopularComics() {
-        return comicRepository.findTop10ByOrderByPopularityScoreDesc();
+        return comicRepository.findAll(PageRequest.of(0, 10, POPULAR_SORT)).getContent();
     }
 
     @Override
@@ -35,6 +46,7 @@ public class ComicServiceImpl implements ComicService {
         return translationRepository.findRecentApprovedTranslations(PageRequest.of(0, 10))
                 .stream()
                 .map(t -> new RecentUpdate(
+                        t.getId(),
                         t.getChapter().getComic().getId(),
                         t.getChapter().getComic().getTitle(),
                         t.getChapter().getComic().getCover(),
@@ -48,9 +60,8 @@ public class ComicServiceImpl implements ComicService {
 
     @Override
     public List<Comic> getNewestComics() {
-        return comicRepository.findTop10ByOrderByCreatedAtDesc();
+        return comicRepository.findAll(PageRequest.of(0, 10, NEWEST_SORT)).getContent();
     }
-
 
     @Override
     public Comic getComicById(Integer id) {
@@ -77,6 +88,7 @@ public class ComicServiceImpl implements ComicService {
                 .sorted((a, b) -> a.getChapterNumber().compareTo(b.getChapterNumber()))
                 .toList();
     }
+
     @Override
     public Map<Integer, Long> getRatingDistribution(int comicId) {
         return comicRepository.getRatingDistribution(comicId).stream()
@@ -102,10 +114,12 @@ public class ComicServiceImpl implements ComicService {
 
     @Override
     public Map<Integer, List<String>> getApprovedLangsByChapter(int comicId) {
-        return comicRepository.getApprovedLangPairsByComic(comicId).stream()
+        return translationRepository.findApprovedLangsByChapterIds(
+                        getChapters(comicId).stream().map(Chapter::getId).toList()
+                ).stream()
                 .collect(Collectors.groupingBy(
-                        row -> ((Number) row[0]).intValue(),
-                        Collectors.mapping(row -> (String) row[1], Collectors.collectingAndThen(Collectors.toSet(), set -> set.stream().sorted().toList()))
+                        row -> (Integer) row[0],
+                        Collectors.mapping(row -> (String) row[1], Collectors.toList())
                 ));
     }
 
@@ -117,10 +131,11 @@ public class ComicServiceImpl implements ComicService {
     @Override
     public List<RelatedWithType> getRelatedComicsWithTypePaged(int id, int page, int size) {
         Pageable pageable = PageRequest.of(page, size);
+
         return comicRepository.findRelatedComicsWithTypePaged(id, pageable)
                 .getContent()
                 .stream()
-                .map(r -> new RelatedWithType((Comic) r[0], (String) r[1]))
+                .map(row -> new RelatedWithType((Comic) row[0], (String) row[1]))
                 .toList();
     }
 }
